# mimizam

./: README.md  README_JP.md  __init__.py  profile_remaining_bottlenecks.py  pyproject.toml  requirements.txt  test_numba_performance.py  test_performance.py
.github/workflows/: python-tests.yml
docs/deepwiki/jp/: 01_overview.md  02_getting_started.md  03_1_audio_fingerprinting_engine.md  03_2_database_layer.md  03_3_matching_identification.md  03_core_architecture.md  04_1_high_level_api.md  04_2_low_level_components.md  04_api_reference.md  05_1_sqlite_backend.md  05_2_mysql_backend.md  05_3_postgresql_backend.md  05_4_elasticsearch_backend.md  05_database_backends.md  06_1_basic_usage_examples.md  06_2_video_processing.md  06_3_performance_optimization.md  06_examples_tutorials.md  07_testing_development.md  08_performance_analysis.md  README.md
docs/wiki/: 01_overview.md  02_installation.md  03_basic_usage.md  03_core_architecture.md  04_architecture.md  04_audio_fingerprinting_engine.md  05_core_technology.md  05_database_layer.md  05_database_setup.md  06_basic_examples.md  06_matching_identification.md  07_faq.md  07_high_level_api.md  07_unified_api.md  08_low_level_components.md  08_lowlevel_api.md  09_database_backends.md  10_sqlite_backend.md  12_performance_optimization.md  12_postgresql_backend.md  13_elasticsearch_backend.md  14_basic_usage_examples.md  14_scoring_details.md  15_video_processing.md  16_performance_optimization.md  17_advanced_examples.md  17_testing_development.md  18_performance_analysis.md  18_video_processing.md  19_faq.md  20_performance_analysis.md  21_debugging.md  22_testing.md  23_performance_testing.md  24_quality_assurance.md  25_algorithm_comparison.md  27_faq.md  README.md
examples/: compare_audio_fingerprinters.py  lowlevelapi_demo.py  mimizam_demo.py  video_fingerprinter.py  video_search.py
scripts/: migrate_database.py
src/: __init__.py  adaptive_parameters.py  audio_fingerprinter.py  database_backends.py  database_base.py  exceptions.py  fingerprint_database.py  mimizam.py  video_database.py  video_fingerprinter.py
src/backends/: elasticsearch_backend.py  mysql_backend.py  postgresql_backend.py  sqlite_backend.py
tests/: test_adaptive_parameters.py  test_audio_fingerprinter.py  test_audio_fingerprinting.py  test_database_backends_containers.py  test_database_comparison.py  test_elasticsearch_containers.py  test_fingerprint_database.py  test_mimizam_integration.py  test_mysql_containers.py  test_performance.py  test_postgresql_containers.py
