[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "mimizam"
version = "1.0.3"
description = "音声・映像指紋システム - Shazam風音声指紋 + AKAZE/VLADベース映像指紋"
readme = "README.md"
license = "MIT"
authors = [
    {name = "mimizam"},
]
maintainers = [
    {name = "mimizam"},
]
keywords = ["audio", "video", "fingerprinting", "shazam", "music", "recognition", "sound", "analysis", "vlad", "akaze"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
    "librosa>=0.9.2",
    "matplotlib>=3.5.0",
    "scipy>=1.7.0",
    "soundfile>=0.10.3",
    "pydub>=0.25.1",
    "ffmpeg-python>=0.2.0",
    # SQLite support (included in Python standard library, but ensuring compatibility)
    "testcontainers>=4.10.0",
    "coverage>=7.9.2",
    # Numba
    "numba>=0.56.0",
    "pyfftw>=0.12.0",
    "resampy>=0.4.3",
    "scikit-image>=0.19.0",
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "scenedetect[opencv]>=0.6.4",
]

[project.optional-dependencies]
sqlite = []  # SQLite is included in Python standard library
mysql = ["mysql-connector-python>=8.0.33"]
postgresql = ["psycopg2-binary>=2.9.5"]
elasticsearch = ["elasticsearch==8.11.0"]
dev = [
    "pytest>=6.2.0",
    "jupyter>=1.0.0",
    "testcontainers>=4.0.0",
    "coverage>=6.0,<8.0",
]
video = [
    "yt-dlp>=2025.6.30",
]
all = [
    # SQLite is in standard library, no additional deps needed
    "mysql-connector-python>=8.0.33",
    "psycopg2-binary>=2.9.5",
    "elasticsearch==8.11.0",
    "pytest>=6.2.0",
    "jupyter>=1.0.0",
    "testcontainers>=4.0.0",
    "coverage>=6.0,<8.0",
    "yt-dlp>=2025.6.30",
]
video-fingerprint = [
    "opencv-python>=4.8.0",
    "scikit-learn>=1.3.0",
    "scenedetect[opencv]>=0.6.4",
]

[tool.setuptools]
packages = ["mimizam", "mimizam.src", "mimizam.src.backends", "mimizam.examples"]

[tool.setuptools.package-dir]
"mimizam" = "."
"mimizam.src" = "src"
"mimizam.src.backends" = "src/backends"
"mimizam.examples" = "examples"

[tool.setuptools.package-data]
"mimizam" = ["*.md", "*.txt", "*.in", "docs/*.md"]
"mimizam.examples" = ["*.py"]
